  Thanks to Dietrich Bollmann for the report.

  Be more strict about matching line endings in the HTTP TCPProxy
  filters. Previously there was a platform specific bug. Thanks to
  Alex Bolgarov for the report.

  Change to the script API: getGrinderID() has been renamed
  getProcessID().

  Correct SSL documentation - The Grinder does not support the
  javax.net.ssl.*	system properties.


Grinder 3.0-beta25
------------------

  The statistics engine has been enhanced to report the standard
  deviation of the test times. This addresses Feature Request 1029224.
  The change requires some changes to the statistics API - the
  timedTests and timedTestTime long statistics have been replaced with
  a single timedTests long sample statistic; there is currently no way
  for a script to directly set, or query, timedTests.

  Latest updates from Bertand Ave for the new HTTP Plugin TCPProxy
  filter. Addresses RFE 1041267, bug 1164319.

  Change the HTTPlugin TCPProxy filters so that they no longer
  interpret ';' as a query string separator. Thanks to Nichole
  Holthoefer for the problem report.

  Fix a bug where the engine would incorrectly override the plugin if
  the plugin had marked a test as an error.

  Correct a few typos. Thanks to Henry Chan for pointing then out.

  Fix a bug so that Test invocation works from from __init__ or
  __del__. Thanks to Bertrand Ave for the bug report.

  Most source files have been converted to use the Unix line endings.
  This is better supported by the Eclipse CVS module and Cygwin tools.


Grinder 3.0-beta24
------------------

  The TCPProxy now returns HTML error messages to the browser where it
  can.

  When used in the default HTTP proxy mode, the TCPProxy always
  listens as an HTTPS proxy as well. The TCPProxy -ssl option now only
  applies to port forwarding mode.

  Fix a bug where the TCPProxy could raise an
  ArrayIndexOutOfBoundsException. Thanks to Alan Droege for the
  report.
